# taucoin-mobile-mining

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: binaries.gradle  build.gradle
app-wallet/: build.gradle  debug.keystore  gradle.properties  proguard-rules.pro
app-wallet/configs/debug/: config.properties
app-wallet/configs/release/: config.properties
app-wallet/src/main/: AndroidManifest.xml
app-wallet/src/main/res/drawable/: grey_switch_rect_round_bg.xml  reward_tab_color.xml  rotate_image_view.xml  selector_reward_forecast_bg.xml  selector_tab_de_fi.xml  shape_oval_connecting.xml  shape_oval_grey.xml  shape_oval_red.xml  shape_oval_young.xml  shape_switch_white.xml  trans_rect_round_bg.xml  white_rect_big_round_bg.xml  white_rect_round_bg.xml  white_rect_round_bg_no_border.xml
app-wallet/src/main/res/layout/: ac_main.xml  activity_address_book.xml  activity_block_detail.xml  activity_block_list.xml  activity_increase.xml  activity_send.xml  activity_setting.xml  activity_splash.xml  dialog_common_layout_hor.xml  dialog_congratulation_layout.xml  dialog_mining_init_progress.xml  fragment_de_fi.xml  fragment_home.xml  fragment_manage.xml  fragment_send_receive.xml  item_address.xml  item_block.xml  item_history_child.xml  item_history_group.xml  item_home_reward.xml  item_home_reward_part.xml  item_layout_dashboard.xml  item_reward.xml  item_reward_forecast.xml  item_three_address.xml  item_tx.xml  list_view_footer.xml  notification_mining.xml  notification_notice.xml  progress_view.xml  toast_layout.xml  view_dialog_keys.xml  view_dialog_send.xml  view_item_text.xml  view_toolbar.xml
app-wallet/src/main/res/layout-v21/: notification_mining.xml  notification_notice.xml
app-wallet/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app-wallet/src/main/res/xml/: file_paths.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_account.xml  activity_block.xml  activity_create_chain.xml  activity_key.xml  activity_loop_send.xml  activity_main.xml  activity_mining.xml  activity_pool_txs.xml  (+4 more)
docs/: anti_dormancy.txt  database_design.txt  fault_tolerance.txt
gradle/wrapper/: gradle-wrapper.properties
lib_bitcoin/: build.gradle
lib_foundation/: build.gradle
lib_platform/: build.gradle
taucoinj-core/: README.md  build.gradle
taucoinj-core-android/: build.gradle
taucoinj-core-android/src/main/: AndroidManifest.xml
taucoinj-core-android/src/main/assets/: logback-console.xml  logback.xml
taucoinj-core-android/src/main/jni/: CMakeLists.txt  io_taucoin_android_NativSecp256k1.c  io_taucoin_android_NativSecp256k1.h  io_taucoin_android_Secp256k1Context.c  io_taucoin_android_Secp256k1Context.h  io_taucoin_secp256k1_NativSecp256k1.c  io_taucoin_secp256k1_NativSecp256k1.h  io_taucoin_secp256k1_Secp256k1Context.c  io_taucoin_secp256k1_Secp256k1Context.h
taucoinj-core-android/src/main/jni/src/: libsecp256k1-config.h  secp256k1.c  util.h
taucoinj-core-android/src/main/jni/src/.deps/: exhaustive_tests-tests_exhaustive.Po  libsecp256k1_la-secp256k1.Plo  tests-tests.Po
taucoinj-core/src/main/resources/: ethereumj.conf  log4j-detailed.properties  log4j.properties
(+738 files in other folders)
